include/joltc.h

typedef struct JPH_Vec3 {
	float x;
	float y;
	float z;
} JPH_Vec3;
typedef struct JPH_Matrix4x4 {
	float m11, m12, m13, m14;
	float m21, m22, m23, m24;
	float m31, m32, m33, m34;
	float m41, m42, m43, m44;
} JPH_Matrix4x4;
typedef struct JPH_RVec3 {
	double x;
	double y;
	double z;
} JPH_RVec3;
typedef struct JPH_RMatrix4x4 {
	float m11, m12, m13, m14;
	float m21, m22, m23, m24;
	float m31, m32, m33, m34;
	double m41, m42, m43, m44;
} JPH_RMatrix4x4;
typedef JPH_Vec3 JPH_RVec3;
typedef JPH_Matrix4x4 JPH_RMatrix4x4;
typedef uint32_t JPH_Color;
typedef struct JPH_AABox {
	JPH_Vec3 min;
	JPH_Vec3 max;
} JPH_AABox;
typedef struct JPH_Triangle {
	JPH_Vec3 v1;
	JPH_Vec3 v2;
	JPH_Vec3 v3;
	uint32_t materialIndex;
} JPH_Triangle;
typedef struct JPH_IndexedTriangleNoMaterial {
	uint32_t i1;
	uint32_t i2;
	uint32_t i3;
} JPH_IndexedTriangleNoMaterial;
typedef struct JPH_IndexedTriangle {
	uint32_t i1;
	uint32_t i2;
	uint32_t i3;
	uint32_t materialIndex;
	uint32_t userData;
} JPH_IndexedTriangle;
typedef struct JPH_MassProperties {
	float mass;
	JPH_Matrix4x4 inertia;
} JPH_MassProperties;
typedef struct JPH_MassProperties                   JPH_MassProperties;