csbind/src/joltc.rs

#[test]
fn bindgen_test_layout_JPH_Matrix4x4() {
    const UNINIT: ::std::mem::MaybeUninit<JPH_Matrix4x4> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<JPH_Matrix4x4>(),
        64usize,
        concat!("Size of: ", stringify!(JPH_Matrix4x4))
    );
    assert_eq!(
        ::std::mem::align_of::<JPH_Matrix4x4>(),
        4usize,
        concat!("Alignment of ", stringify!(JPH_Matrix4x4))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).m11) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_Matrix4x4),
            "::",
            stringify!(m11)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).m12) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_Matrix4x4),
            "::",
            stringify!(m12)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).m13) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_Matrix4x4),
            "::",
            stringify!(m13)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).m14) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_Matrix4x4),
            "::",
            stringify!(m14)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).m21) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_Matrix4x4),
            "::",
            stringify!(m21)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).m22) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_Matrix4x4),
            "::",
            stringify!(m22)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).m23) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_Matrix4x4),
            "::",
            stringify!(m23)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).m24) as usize - ptr as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_Matrix4x4),
            "::",
            stringify!(m24)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).m31) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_Matrix4x4),
            "::",
            stringify!(m31)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).m32) as usize - ptr as usize },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_Matrix4x4),
            "::",
            stringify!(m32)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).m33) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_Matrix4x4),
            "::",
            stringify!(m33)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).m34) as usize - ptr as usize },
        44usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_Matrix4x4),
            "::",
            stringify!(m34)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).m41) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_Matrix4x4),
            "::",
            stringify!(m41)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).m42) as usize - ptr as usize },
        52usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_Matrix4x4),
            "::",
            stringify!(m42)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).m43) as usize - ptr as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_Matrix4x4),
            "::",
            stringify!(m43)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).m44) as usize - ptr as usize },
        60usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_Matrix4x4),
            "::",
            stringify!(m44)
        )
    );
}
pub type JPH_RVec3 = JPH_Vec3;
pub type JPH_RMatrix4x4 = JPH_Matrix4x4;
pub type JPH_Color = u32;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPH_AABox {
    pub min: JPH_Vec3,
    pub max: JPH_Vec3,
}
#[test]
fn bindgen_test_layout_JPH_AABox() {
    const UNINIT: ::std::mem::MaybeUninit<JPH_AABox> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<JPH_AABox>(),
        24usize,
        concat!("Size of: ", stringify!(JPH_AABox))
    );
    assert_eq!(
        ::std::mem::align_of::<JPH_AABox>(),
        4usize,
        concat!("Alignment of ", stringify!(JPH_AABox))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).min) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_AABox),
            "::",
            stringify!(min)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).max) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_AABox),
            "::",
            stringify!(max)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPH_Triangle {
    pub v1: JPH_Vec3,
    pub v2: JPH_Vec3,
    pub v3: JPH_Vec3,
    pub materialIndex: u32,
}
#[test]
fn bindgen_test_layout_JPH_Triangle() {
    const UNINIT: ::std::mem::MaybeUninit<JPH_Triangle> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<JPH_Triangle>(),
        40usize,
        concat!("Size of: ", stringify!(JPH_Triangle))
    );
    assert_eq!(
        ::std::mem::align_of::<JPH_Triangle>(),
        4usize,
        concat!("Alignment of ", stringify!(JPH_Triangle))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).v1) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_Triangle),
            "::",
            stringify!(v1)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).v2) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_Triangle),
            "::",
            stringify!(v2)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).v3) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_Triangle),
            "::",
            stringify!(v3)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).materialIndex) as usize - ptr as usize },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_Triangle),
            "::",
            stringify!(materialIndex)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPH_IndexedTriangleNoMaterial {
    pub i1: u32,
    pub i2: u32,
    pub i3: u32,
}
#[test]
fn bindgen_test_layout_JPH_IndexedTriangleNoMaterial() {
    const UNINIT: ::std::mem::MaybeUninit<JPH_IndexedTriangleNoMaterial> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<JPH_IndexedTriangleNoMaterial>(),
        12usize,
        concat!("Size of: ", stringify!(JPH_IndexedTriangleNoMaterial))
    );
    assert_eq!(
        ::std::mem::align_of::<JPH_IndexedTriangleNoMaterial>(),
        4usize,
        concat!("Alignment of ", stringify!(JPH_IndexedTriangleNoMaterial))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).i1) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_IndexedTriangleNoMaterial),
            "::",
            stringify!(i1)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).i2) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_IndexedTriangleNoMaterial),
            "::",
            stringify!(i2)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).i3) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_IndexedTriangleNoMaterial),
            "::",
            stringify!(i3)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPH_IndexedTriangle {
    pub i1: u32,
    pub i2: u32,
    pub i3: u32,
    pub materialIndex: u32,
    pub userData: u32,
}
#[test]
fn bindgen_test_layout_JPH_IndexedTriangle() {
    const UNINIT: ::std::mem::MaybeUninit<JPH_IndexedTriangle> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<JPH_IndexedTriangle>(),
        20usize,
        concat!("Size of: ", stringify!(JPH_IndexedTriangle))
    );
    assert_eq!(
        ::std::mem::align_of::<JPH_IndexedTriangle>(),
        4usize,
        concat!("Alignment of ", stringify!(JPH_IndexedTriangle))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).i1) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_IndexedTriangle),
            "::",
            stringify!(i1)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).i2) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_IndexedTriangle),
            "::",
            stringify!(i2)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).i3) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_IndexedTriangle),
            "::",
            stringify!(i3)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).materialIndex) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_IndexedTriangle),
            "::",
            stringify!(materialIndex)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).userData) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_IndexedTriangle),
            "::",
            stringify!(userData)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPH_MassProperties {
    pub mass: f32,
    pub inertia: JPH_Matrix4x4,
}
